@@ -26,6 +26,9 @@ Version 7.7 05-Mar-08
         pcregrep specification - which I improved to make it absolutely clear).
         The action now is always to scan all levels of directory, and just
         apply the include/exclude patterns to regular files.
+        
+5.  Added the --include_dir and --exclude_dir patterns to pcregrep, and used
+    --exclude_dir in the tests to avoid scanning .svn directories. 
 
 
 Version 7.6 28-Jan-08
